src/App.css
@import url('https://fonts.googleapis.com/css2?family=Aoboshi+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Tsukimi+Rounded&display=swap');
html,
body {
  margin: 0;
  font-family: 'Aoboshi One', serif;
  padding: 0;
  margin: 0;
  background-color: #f6f7f9;
}

/* This app will be made for mobile view only */

.container {
  width: 400px;
  height: 100vh;
  margin: 0 auto;
  padding: 15px 15px 0 15px;
  display: flex;
  flex-direction: column;
}

.header-container{
  display: flex;
  justify-content: center;
  background-color: black;
  color: #f6f7f9;
  border-radius: 0 0 10px 10px;
  margin-top: -15px;
  position: relative;
  }
  
  .header-container a {
    position: absolute;
    top: 22px;
    right: 16px;
    font-size: 26px;
    text-decoration: none;
    color: white;
}

.main-container{
  width: 100%;
  display: flex;
  flex-direction: column;
  font-family: 'Tsukimi Rounded', sans-serif;
}

.master-card-container{
  overflow-y: auto;
  height: 80vh;
  width: 400px;
  overflow-x: hidden;
  -ms-overflow-style: none;  /* Internet Explorer 10+ */
  scrollbar-width: none;  /* Firefox */
}

.no-review{
  color: grey;
  font-size: 25px;
  display: flex;
  align-items: center;
  height: 493px;
  justify-content: center;
}

.master-card-container::-webkit-scrollbar { 
  display: none;  /* Safari and Chrome */
}


.search-container{
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 160px;
  background-color: #fff;
  border-radius: 5px;
  box-shadow: 0 0 10px rgba(0,0,0,0.2);
  margin-bottom: 15px;
}

.search-content{
  padding: 10px;
}

.search-content h2{
  font-size: 24px;
  font-weight: 500;
  margin-top: -3px;
  color: gray;
}

.search-content h2 span{
  color: black;
  font-weight: 500;
}

.search-content input{
  width: 94%;
  height: 40px;
  border: 2px dotted grey ;
  border-radius: 5px;
  padding: 0 10px !important;
  margin-right: -10px;
  font-size: 16px;
  outline: none;
  color: black;
}

.loader-container {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.loader {
  border: 5px solid #f3f3f3; /* Light grey */
  border-top: 5px solid black; /* Blue */
  border-radius: 50%;
  width: 55px;
  height: 55px;
  animation: spin 2s linear infinite;
}

.what-can-you-container{
  height: auto;
  flex-direction: column;
  display: flex;
}

.what-can-you-do-search, .what-can-you-reviews{
  flex-direction: column;
  display: flex;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 3px -2px, rgba(0, 0, 0, 0.14) 0px 3px 4px 0px, rgba(0, 0, 0, 0.12) 0px 1px 8px 0px;
  background: white;
  align-items: center;
  padding: 5px;
  margin-bottom: 10px;
}

.what-can-you-search-heading, .what-can-you-reviews-heading{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.what-can-you-search-heading h3, .what-can-you-reviews-heading h3{
  margin: 0;
}

.what-can-you-search-content p, .what-can-you-reviews-content p{
  color: grey;
}

.what-can-you-logo{
  padding: 10px;
  margin: 10px;
  background: black;
  color: #fff;
  border-radius: 50%;
}

.what-can-you-search-content, .what-can-you-reviews-content{
  text-align: center;
}

